# writingtool

./: .gitignore  LICENSE  README.md  capture.html  overlay.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.js
.claude/: settings.local.json
src/: app.css  capture.ts  overlay.ts  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  gemini.rs  lib.rs  main.rs  win32.rs
src/lib/: CaptureSelector.svelte  Icon.svelte  Overlay.svelte  Settings.svelte  api.ts
